--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "next": "^14.0.0",
     "openai": "^4.24.0",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "clsx": "^2.0.0",
+    "@radix-ui/react-primitive": "^2.0.0",
+    "@radix-ui/react-slot": "^2.0.0",
+    "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
